Revert "Adwaita: avoid clipping menu shadows"
While the workaround hides majority of the issue there are still two big downsides:

  - shadow does eat from the widget dimensions so alignment is broken
  - situations like popover going upwards on screen edge break completely

The appropriate action is to revert these theme duct tape solutions to make room
for a proper fix.

This reverts commit b3dba1dca66d380d1cfafbe92b36d7854b3f4244.

Issue https://gitlab.gnome.org/GNOME/gtk/-/issues/1987

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -1861,7 +1861,6 @@ $_menu-padding: 12px; //inner menuitem padding
 
 popover.menu {
   padding: 0;
-  margin: 0 3px 5px 3px; //alocate space for dropshadow. #1987
 
   box.inline-buttons {
     padding: 0 $_menu-padding;
